--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -7,23 +7,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
-
-    <div> 
+    <body>
+        <div> 
         <h1 id="titPrincipal">Home</h1>
         <p>Curso de Web o Patrones </p>
 
     </div>
-    <div>    
-        <p class="parrafoVerde" style="text-align: right;">Lorem ipsum odor amet, consectetuer adipiscing elit. Imperdiet quis 
+    <div style="text-align: center;color: green">    
+        <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Imperdiet quis 
             nullam massa purus efficitur laoreet ex. Parturient nostra sodales 
             pulvinar; ex arcu mi vitae mauris. Venenatis finibus consequat luct
             us netus curae pellentesque. Suspendisse eleifend dui curae rutrum penatibus torquent. 
             Maecenas ante pretium urna vel porta velit.</p>
-        <p class="parrafoVerde" style="text-align: left;">Elementum penatibus tempus
+        <p>Elementum penatibus tempus
             iaculis iaculis adipiscing vivamus cras molestie amet.
             Vitae est consequat lobortis feugiat sodales donec pharetra aptent.
         </p>
-        <p class="parrafoRojo" style="text-align: center;color: brown">Odio orci venenatis nunc lacinia proin felis?
+        <p>Odio orci venenatis nunc lacinia proin felis?
             Phasellus efficitur in dui volutpat eros vivamus. 
             Porttitor parturient nisl himenaeos dui velit dis primis. 
             Malesuada ad per viverra parturient vulputate semper pretium. </p></div>
@@ -34,6 +34,5 @@
     <br>
     <br>
     <p>Ultima Linea</p>
-
-
+    </body>
 </html>
