--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <style>
+            .parrafoVerde{
+                color: green;
+            }
+        </style>
     </head>
 
     <div> 
@@ -13,20 +20,20 @@
         <p>Curso de Web o Patrones </p>
 
     </div>
-    <div>    
-        <p class="parrafoVerde" style="text-align: right;">Lorem ipsum odor amet, consectetuer adipiscing elit. Imperdiet quis 
-            nullam massa purus efficitur laoreet ex. Parturient nostra sodales 
-            pulvinar; ex arcu mi vitae mauris. Venenatis finibus consequat luct
-            us netus curae pellentesque. Suspendisse eleifend dui curae rutrum penatibus torquent. 
-            Maecenas ante pretium urna vel porta velit.</p>
-        <p class="parrafoVerde" style="text-align: left;">Elementum penatibus tempus
-            iaculis iaculis adipiscing vivamus cras molestie amet.
-            Vitae est consequat lobortis feugiat sodales donec pharetra aptent.
-        </p>
-        <p class="parrafoRojo" style="text-align: center;color: brown">Odio orci venenatis nunc lacinia proin felis?
-            Phasellus efficitur in dui volutpat eros vivamus. 
-            Porttitor parturient nisl himenaeos dui velit dis primis. 
-            Malesuada ad per viverra parturient vulputate semper pretium. </p></div>
+
+    <p class="parrafoVerde" style="text-align: right;">Lorem ipsum odor amet, consectetuer adipiscing elit. Imperdiet quis 
+        nullam massa purus efficitur laoreet ex. Parturient nostra sodales 
+        pulvinar; ex arcu mi vitae mauris. Venenatis finibus consequat luct
+        us netus curae pellentesque. Suspendisse eleifend dui curae rutrum penatibus torquent. 
+        Maecenas ante pretium urna vel porta velit.</p>
+    <p class="parrafoVerde" style="text-align: left;">Elementum penatibus tempus
+        iaculis iaculis adipiscing vivamus cras molestie amet.
+        Vitae est consequat lobortis feugiat sodales donec pharetra aptent.
+    </p>
+    <p class="parrafoRojo" style="text-align: center;color: brown">Odio orci venenatis nunc lacinia proin felis?
+        Phasellus efficitur in dui volutpat eros vivamus. 
+        Porttitor parturient nisl himenaeos dui velit dis primis. 
+        Malesuada ad per viverra parturient vulputate semper pretium. </p>
     <br>
     <br>
     <br>
